# yasone

./: .gitignore  README.md  conda_environment.yaml  data_processing.md  pyproject.toml  setup.md  star_galaxy_separation.ipynb  yasone.txt  yasone_review.md
SExtractor samples/: Core-Single_Image_F140.sh  Core-f140w.sex  Core_F140_Double_Image.sh  XLSSC-122.param
Yasone_1_2_3_coordinates/: ReadMe.txt  Yasone_1_g.csv  Yasone_1_r.csv  Yasone_2_g.csv  Yasone_2_r.csv  Yasone_3_g.csv  Yasone_3_r.csv
analysis/: ana_utils.py  best_detection.ipynb  catalogue_analysis.ipynb  catalogue_verification.ipynb  example_problem_images.ipynb  filter_utils.py  julen_centre_cmd.ipynb  julen_data_process.ipynb  julen_new.ipynb  julen_stacking.ipynb  magnitude_comparison.ipynb  nice_images.ipynb  object_properties.toml  overdensity_statistics.ipynb  photometry_comparisons.ipynb  plot_utils.py  reproduce_julen.ipynb  sdss_isochrone_test.ipynb  select_julen.py  star_gal_seperation.ipynb  synthetic_population.ipynb
imaging/: 2q  Julen_data_process.txt  README.md  astrometrize.py  calc_weights.py  convenience_functions.py  do_outliers_affect_stacked_flats.ipynb  flat_field.py  flat_fields.ipynb  image_comments.md  image_keys.toml  image_stacking.ipynb  initial_image_reduction.ipynb  make_sat_mask.py  print_fits_headers.ipynb  script_utils.py  stack_bias.py  stack_biases.ipynb  stack_flats.py  subtract_bias.py  trim_images.py
photometry/: _analyse_bright_stars.jl  _fit_bright_stars.py  _run_swarp_stack.py  analyse_bright_stars.jl  astrometrize.py  astrometrize_all.sh  calc_extinction.ipynb  (+57 more)
(+229 files in other folders)
