[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "yasone"
version = "0.1.0"
authors = [
    { name="Daniel Boyea", email="danielaboyea@gmail.com" },
]

description = "utilities for the yasone photometry project"
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "ccdproc",
    "numpy",
    "tomli_w",
    "astropy",
    "photutils",
]


